*Empty MediaWiki Message*

--- a/Cabdiqaasim_Salaad.mw
+++ b/Cabdiqaasim_Salaad.mw
@@ -1,12 +1,47 @@
-{{gumud}}
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Cabdiqaasim Salaad Xassan'''<br>
+[[Image:Abdiqassim_Salad_Hassan_1.jpg|250px]]
+|-
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynihii 7aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 27 [[Agoosto]], [[2000]] ilaa 14 [[Oktoobar]] [[2004]]
+|-
+! Xil kalawareeg:
+| [[Xuseen Maxamed Faarax Caydiid]].
+|-
+! Xil ku wareejin
+| [[Cabdullaahi Yuusuf Axmed]].
+|-
+! Dhashay:
+| [[1941]]
+<!--|-
+! Ku dhashay:
+|[[Gaalkacyo]], [[Soomaaliya]]-->
+<!--|-
+! Dhintay:
+| [[]] [[]]-->
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
 
-[[Image:Abdiqassim Salad Hassan 1.jpg|thumb|Cabdiqaasim Salaad Xassan]]
+'''Cabdiqaasim Salaad Xassan''' wuxuu dhashay sanadku markuu ahaa [[1941]]dii. Wuxuu ahaa madaxwaynaha [[Soomaaliya]] taariikhdu markey ahayd 27dii [[Agoosto]] sanadkii [[2000]] ilaa 14kii [[Oktoobar]] sanadkii [[2004]].
 
-Cabdi Qaasin Salaad Booy waa nin ku qamaaray faras qaldan. Wuxuu sartay rajadiisi oo dhan qabil juhala ah oo la yiraah Ceeyr "Ceeyr Talo Xume" oo ismooday wixii tuuganimada lagu keenay in lagu sharciyeesano karo hadii gar dheer la deeysto.
-
-Manta qori amxaar ayeey hoos fadhiyaan wixii aay somaali ka galeena ayaa tartiib looga jeeba.
-
-[[Category:Soomaaliya]]
+[[Category:Siyaasada Soomaaliya]]
 
 [[ca:Abdiqassim Salad Hassan]]
 [[cs:Abdiqasim Salad Hassan]]
