*Empty MediaWiki Message*

--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -1,11 +1,13 @@
 == Madaxweyneyaashii Soomaaliya ==
 
-* [[Aadan Cabdulle Cusmaan]] (Aadan Cade) : [[1960]] - [[1967]]
-* [[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
-* [[Maxamed Siyaad Barre]] : [[1969]] - [[1991]]
-* [[Ali Mahdi Muhammad]] : [[1991]] - [[1995]]
-* [[Cabdiqaasim Salaad Xassan]] : [[2000]] - [[2004]]
-* [[Cabdullaahi Yuusuf Axmed]] : [[2004]] -
+*[[Aadan Cabdulle Cusmaan]] : [[1960]] - [[1967]]
+*[[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
+*[[Maxamed Siyaad Barre]] : [[1969]] - [[1991]]
+*[[Ali Mahdi Muhammad]] : [[1991]] - [[1995]]
+*[[Maxamed Faarax Caydiid]] : [[1995]] - [[1996]]
+*[[Xuseen Maxamed Faarax Caydiid]] : [[1996]] - [[1997]]
+*[[Cabdiqaasim Salaad Xassan]] : [[2000]] - [[2004]]
+*[[Cabdullaahi Yuusuf Axmed]] : [[2004]] - 
 
 [[Category:Siyaasada Soomaaliya]]
 
