--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -14,10 +14,10 @@
 | colspan="2" style="text-align: center;" | 15 [[Juun]], [[1995]] ilaa 1 [[Agoosto]], [[1996]]
 |-
 ! Xil kalawareeg:
-| [[Ali Mahdi Muhammad|Cali Mahdi Maxamed.]]
+| [[Cali Mahdi Maxamed]].
 |-
 ! Xil ku wareejin:
-| [[Xuseen Maxamed Faarax Caydiid.]]
+| [[Xuseen Maxamed Faarax Caydiid]]
 |-
 ----
 |-
