--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 1aad ee [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | 1 [[Luuliyo]], [[1960]] ilaa 10 [[Juun]], [[1967]]
