*Empty MediaWiki Message*

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 2aad ee [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | 10 [[Juun]], [[1967]] ilaa 15 [[Oktoobar]], [[1969]]
