--- a/Siyaad_Barre.mw
+++ b/Siyaad_Barre.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 3aad ee [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | 21 [[Oktoobar]], [[1969]] ilaa 26 [[Janaayo]], [[1991]]
