*Empty MediaWiki Message*

--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynihii 4aad ee [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | [[Janaayo]], [[1995]] ilaa [[Juun]], [[1995]]
