*Empty MediaWiki Message*

--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 5aad ee [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | 15 [[Juun]], [[1995]] ilaa 1 [[Agoosto]], [[1996]]
