--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -8,7 +8,7 @@
 |-
 ! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynaha [[Soomaliya]]
 |-
-! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 |-
 | colspan="2" style="text-align: center;" | 14 [[Oktoobar]], [[2004]] ilaa '''hada'''
