--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -1,13 +1,15 @@
-== Madaxweyneyaashii Soomaaliya ==
-
-*[[Aadan Cabdulle Cusmaan]] : [[1960]] - [[1967]]
-*[[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
-*[[Maxamed Siyaad Barre]] : [[1969]] - [[1991]]
-*[[Ali Mahdi Muhammad]] : [[1991]] - [[1995]]
-*[[Maxamed Faarax Caydiid]] : [[1995]] - [[1996]]
-*[[Xuseen Maxamed Faarax Caydiid]] : [[1996]] - [[1997]]
-*[[Cabdiqaasim Salaad Xassan]] : [[2000]] - [[2004]]
-*[[Cabdullaahi Yuusuf Axmed]] : [[2004]] - 
+==Madaxweyneyaashii [[Soomaaliya]]==
+:'''Madaxweyneyaashii soo maray dalka [[Soomaaliya]].'''
+<gallery>
+Image:Aadan_Cade.jpg|<center>[[Aadan Cabdulle Cusmaan]]</br> [[1960]] - [[1967]]</center>
+Image:Sharmaarke.jpg|<center>[[Cabdirashiid Cali Sharma'arke|C/rashiid C. Sharma'arke]]</br> [[1967]] - [[1969]]</center>
+Image:Siyaad_Barre.jpg|<center>[[Maxamed Siyaad Barre]]</br> [[1969]] - [[1991]]</center>
+Image:Cali_Mahdi.jpg|<center>[[Ali Mahdi Muhammad]]</br> [[1991]] - [[1995]]</center>
+Image:Maxamed_Faarax_ceydiid.jpg|<center>[[Maxamed Faarax Caydiid]]</br> [[1995]] - [[1996]]</center>
+Image:Xuseen_Caydiid.jpg|<center>[[Xuseen Maxamed Faarax Caydiid| Xuseen M.F. Caydiid]]</br> [[1996]] - [[1997]]</center>
+Image:Abdiqassim_Salad_Hassan_1.jpg|<center>[[Cabdiqaasim Salaad Xassan|C/qaasim Salaad Xassan]]</br> [[2000]] - [[2004]]</center>
+Image:Abdullahi_Yusuf_Ahmed.jpg|<center>[[Cabdullaahi Yuusuf Axmed|C/laahi Yuusuf Axmed]]</br> [[2004]] - '''Hada'''</center>
+</gallery>
 
 [[Category:Siyaasada Soomaaliya]]
 
