--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -1,4 +1,4 @@
-{| class="infobox" style="font-size: 95%; text-align: left;"
+{| class="infobox" style="font-size: 100; text-align: left;"
 |-
 |-
 {{#if: |
