روبوت  إضافة: [[kv:Категория:User en]] تعديل: [[gn:Ñemohenda:User en]]

--- a/Category:User_en.mw
+++ b/Category:User_en.mw
@@ -59,7 +59,7 @@ Liiskaan waxaa ku jira isticmaalayaasha ku hadla afka [[Ingiriiska]].
 [[ga:Catagóir:Úsáideoir en]]
 [[gd:Category:User en]]
 [[gl:Categoría:Usuario en]]
-[[gn:Categoría:User en]]
+[[gn:Ñemohenda:User en]]
 [[got:Category:Niutands en]]
 [[gv:Category:User en]]
 [[he:קטגוריה:User en]]
@@ -87,6 +87,7 @@ Liiskaan waxaa ku jira isticmaalayaasha ku hadla afka [[Ingiriiska]].
 [[ko:분류:사용자 en]]
 [[ksh:Saachjrupp:Wikipedia:Medmaacher kann Änglish]]
 [[ku:Kategorî:User en]]
+[[kv:Категория:User en]]
 [[kw:Category:User en]]
 [[ky:Category:User en]]
 [[la:Categoria:Usor en]]
