*Empty MediaWiki Message*

--- a/Cabdullaahi_Ciise.mw
+++ b/Cabdullaahi_Ciise.mw
@@ -1,4 +1,42 @@
-[[Image:Cabdulllahi_Ciise.jpg#filelinks|250px|right|thumb|Cabdullaahi Ciise]]
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Cabdullaahi Ciise Maxamuud'''<br>
+[[Image:Cabdullaahi_Ciise.jpg|220px]]
+|-
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | Ra'iisul wasaarahii 1aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 1 [[Luuliyo]], [[1949]] ilaa 1 [[Luuliyo]], [[1960]]
+|-
+! Dhashay:
+| [[1922]]
+<!--|-
+! Ku dhashay:
+| [[]], [[]]-->
+|-
+! Dhintay:
+| [[1988]]
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+! Ururka:
+| [[Somali Youth League]] (SYL)
+|-
+
+|}
+
 '''Cabdullaahi Ciise Maxamuud''' (1922-1988), Allahaa u naxariistee waxa uu ku dhashay degmada [[Afgooye]] ee gobolka [[Shabeellaha Hoose]] ee dalka [[Soomaaliya]]. Wuxuu ahaa halgamaa door weyn ka ciyaaray madaxmadaanida iyo qaranimada Soomaaliyeed, wuxuu kale oo uu ahaa raiisul wasaarahii ugu horeeye dalka [[Soomaaliya]] ay yeelato ee dowladii daaqiliyada ahayd inta aysan [[Soomaaliya]] madaxbanaanida helin. 
 
 __TOC__
