*Empty MediaWiki Message*

--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -5,4 +5,40 @@ Adeegsiga hababka cilmiga ku dhisan ayey laamahani kaga duwanaadeen kuwa kale ee
 Waxa maadooyinkan ka mid ah: [[dhaqaalaha]], [[culuunta siyaasadda]], iyo [[dembi-baarista]].
 
 
-[[en:social sciences]]
+[[an:Zenzias sozials]]
+[[ast:Ciencies sociales]]
+[[ca:Ciències socials]]
+[[cy:Gwyddorau cymdeithas]]
+[[da:Samfundsvidenskab]]
+[[de:Sozialwissenschaft]]
+[[et:Sotsiaalteadused]]
+[[es:Ciencias sociales]]
+[[eo:Socia scienco]]
+[[fr:Sciences sociales]]
+[[fur:Siencis sociâls]]
+[[ko:사회 과학]]
+[[io:Sociala cienci]]
+[[id:Ilmu-ilmu sosial]]
+[[it:Scienze sociali]]
+[[he:מדעי החברה]]
+[[ka:საზოგადოებრივი მეცნიერებები]]
+[[lt:Socialiniai mokslai]]
+[[hu:Társadalomtudomány]]
+[[mk:Општествени науки]]
+[[ml:സാമൂഹ്യശാസ്ത്രം]]
+[[ms:Sains sosial]]
+[[nl:Sociale wetenschappen]]
+[[ja:社会科学]]
+[[no:Samfunnsvitenskap]]
+[[pl:Nauki społeczne]]
+[[pt:Ciências sociais]]
+[[ru:Общественные науки]]
+[[sl:Družboslovje]]
+[[fi:Yhteiskuntatieteet]]
+[[sv:Samhällsvetenskap]]
+[[ta:சமூக அறிவியல்]]
+[[th:สังคมศาสตร์]]
+[[tl:Agham panlipunan]]
+[[tr:Sosyal bilimler]]
+[[ur:معاشرتی علوم]]
+[[zh:社会科学]]
