*Empty MediaWiki Message*

--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -11,6 +11,7 @@ Waxa maadooyinkan ka mid ah: [[dhaqaalaha]], [[culuunta siyaasadda]], iyo [[demb
 [[cy:Gwyddorau cymdeithas]]
 [[da:Samfundsvidenskab]]
 [[de:Sozialwissenschaft]]
+[[en:Social sciences]]
 [[et:Sotsiaalteadused]]
 [[es:Ciencias sociales]]
 [[eo:Socia scienco]]
