*Empty MediaWiki Message*

--- a/Dhaqaale.mw
+++ b/Dhaqaale.mw
@@ -8,4 +8,97 @@ dhaqaale
 
 [[Category:cilmiga bulshada]]
 
+
+[[af:Ekonomie]]
+[[als:Wirtschaftswissenschaft]]
+[[ar:اقتصاد]]
+[[an:Economía]]
+[[ast:Economía]]
+[[bn:অর্থনীতি]]
+[[zh-min-nan:Keng-chè-ha̍k]]
+[[be:Эканоміка]]
+[[bs:Ekonomija]]
+[[br:Armerzh]]
+[[bg:Икономика (наука)]]
+[[ca:Economia]]
+[[cv:Экономика]]
+[[ceb:Ekonomiks]]
+[[cs:Ekonomie]]
+[[cy:Economeg]]
+[[da:Økonomi]]
+[[de:Wirtschaftswissenschaft]]
 [[en:economics]]
+[[et:Majandusteadus]]
+[[el:Οικονομικά]]
+[[es:Economía]]
+[[eo:Ekonomiko]]
+[[eu:Ekonomia]]
+[[fa:اقتصاد]]
+[[fr:Sciences économiques]]
+[[fy:Ekonomy]]
+[[fur:Economie]]
+[[ga:Eacnamaíocht]]
+[[gl:Economía]]
+[[hak:Kîn-chi-ho̍k]]
+[[ko:경제학]]
+[[hi:अर्थशास्त्र]]
+[[hr:Ekonomija]]
+[[io:Ekonomiko]]
+[[id:Ilmu ekonomi]]
+[[ia:Economia]]
+[[is:Hagfræði]]
+[[it:Economia]]
+[[he:כלכלה]]
+[[jv:Ekonomi]]
+[[ka:ეკონომიკური სისტემა]]
+[[ky:Экономика]]
+[[lad:Ekonomiya]]
+[[lo:ເສດຖະສາດ]]
+[[la:Oeconomia]]
+[[lv:Ekonomika]]
+[[lb:Economie]]
+[[lt:Ekonomika]]
+[[li:Economie]]
+[[jbo:dinske]]
+[[hu:Közgazdaságtan]]
+[[mk:Економија]]
+[[mg:Toe-karena]]
+[[mr:अर्थशास्त्र]]
+[[ms:Ekonomi]]
+[[nl:Economie]]
+[[ja:経済学]]
+[[no:Økonomi]]
+[[nn:Økonomi]]
+[[nrm:Êcononmie]]
+[[oc:Economia]]
+[[ug:ئىقتىسادشۇناسلىق]]
+[[ps:اقتصاد]]
+[[km:សេដ្ឋកិច្ច]]
+[[pl:Ekonomia]]
+[[pt:Economia]]
+[[ro:Economie]]
+[[ru:Экономика]]
+[[sm:Economics]]
+[[sa:अर्थशास्त्रं]]
+[[sco:Economics]]
+[[sq:Ekonomia]]
+[[scn:Econumìa]]
+[[simple:Economics]]
+[[sk:Ekonomický systém]]
+[[sl:Ekonomija]]
+[[sr:Економија]]
+[[sh:Privreda]]
+[[fi:Kansantalous]]
+[[sv:Nationalekonomi]]
+[[ta:பொருளியல்]]
+[[th:เศรษฐศาสตร์]]
+[[vi:Kinh tế học]]
+[[te:ఆర్థిక శాస్త్రము]]
+[[tl:Ekonomika]]
+[[tr:İktisat]]
+[[uk:Економіка]]
+[[ur:معاشیات]]
+[[wo:Koom-koom]]
+[[yi:ווירטשאפט]]
+[[zh-yue:經濟]]
+[[zh:经济学]]
