--- a/Kismaayo.mw
+++ b/Kismaayo.mw
@@ -1,10 +1,7 @@
 [[Image:So-map.png|right|thumbnail|400px|Kismaayo]]
 
-'''Kismayo''' waa magaalo Somaali. Magaalada waxaa 80% dega beesha SADE, Baadiyahana dhanka koonfur ee Wabiga Jubba [[Ogaadeen, Sade iyo Harti (ha ugu badnaado Sade-huye]] iyo baadiyaha ilaayo Garisa [[Kenya]], Dhanka Kalana waxaa dagan Sade khaas ah, qabiil kale lama dego. Magaalada Kismaayo waxaa aasaasay Beesha Sade. Sidoo kale magaalada waxaa deganaa niman [[Hindi]] ah iyo kuwa badan oo asalkooda ka soo jeeda  jasiirada carabta gaar ahaan  gobolka Xadarmoot ee waddanka [[Yemen]].
-
-[[Category:Magaalooyinka Soomaaliya]]
-
-[[de:Kismaayo]]waxaad  karagten cidii qorteyba    beesha sade daaroot
+'''Kismayo''' waa magaalo Somaali. Magaalada waxaa  dega soomaaliyoodhan waxaana dagijiray markiihore ogaadeen laakiin waxaa aasaasay magaaala nimadkeeda dad cadaan ah iyo majeerteen laakiin waxaa ubadan gobalada ogaadeen sabatoo ah gobalka afmadow iyo gobalka badhaadhaba waxaadaga ogaadeen amaba absame khaas ah gobalka jamaamana waxaadaga soomaali isku jir ah sida sheekhaal biyamaal jareer iyo soomaalikalaba   
+[[de:Kismaayo]
 [[en:Kismayo]]
 [[es:Kismaayo]]
 [[et:Kismaayo]]
