--- a/Category:Aasiya.mw
+++ b/Category:Aasiya.mw
@@ -94,6 +94,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[sv:Kategori:Asien]]
 [[sw:Category:Asia]]
 [[ta:பகுப்பு:ஆசியா]]
+[[tet:Kategoria:Ázia]]
 [[th:หมวดหมู่:ทวีปเอเชีย]]
 [[tk:Category:Aziýa]]
 [[tl:Category:Asya]]
