روبوت  إضافة: [[cv:Uetersen]], [[za:Uetersen]]

--- a/Uetersen.mw
+++ b/Uetersen.mw
@@ -35,6 +35,7 @@
 [[cs:Uetersen]]
 [[csb:Uetersen]]
 [[cu:Ӱтерзенъ]]
+[[cv:Uetersen]]
 [[cy:Uetersen]]
 [[da:Uetersen]]
 [[de:Uetersen]]
@@ -168,6 +169,7 @@
 [[wo:Uetersen]]
 [[xal:Uetersen]]
 [[xh:Uetersen]]
+[[za:Uetersen]]
 [[zea:Uetersen]]
 [[zh:烏移特森]]
 [[zh-min-nan:Uetersen]]
