*Empty MediaWiki Message*

--- a/Sheekh_Xasan_Albanaa.mw
+++ b/Sheekh_Xasan_Albanaa.mw
@@ -1,4 +1,32 @@
-[[Image:banna.jpg]] [[Sheekh Xasan Albanaa]] (Ustaad Xasan Al Banaa) waxaa uu dhashay barqanimo maalin Axad ah 25kii bisha Shacbaan sanadkii 1324(Hijiryaha) 14kii [[Oktoobar]] [[1906]], waxaana uu ku dalka [[Masar]] deegaanka loo yaqaano Buxayra.
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" |
+[[Image:SHBana.jpg|250px]]
+|-
+! colspan="2" style="background-color: #eee9e9; text-align: center;" | '''Sheekh Xasan Albanaa'''
+|-
+! Dhashay:
+| 14 [[Oktoobar]], [[1906]]
+|-
+! Ku dhashay:
+| [[Masar]]
+|-
+! Dhintay:
+| 12 [[Febraayo]], [[1949]]
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Egypt.svg|25px]]}}}''' [[Masar|Masaari]]
+|-
+|}
+
+
+'''Sheekh Xasan Albanaa''' (Ustaad Xasan Al Banaa) waxaa uu dhashay barqanimo maalin Axad ah 25kii bisha Shacbaan sanadkii 1324(Hijiryaha) 14kii [[Oktoobar]] [[1906]], waxaana uu ku dalka [[Masar]] deegaanka loo yaqaano Buxayra.
 
 == Taariikhdiisa ==
 
