*Empty MediaWiki Message*

--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -1,10 +1,46 @@
-[[Image:Meles Zenawi.jpg|thumb|Meles Zenawi]]
-Qoraa soomaaliyeed ayaa waxaa uu yiri '''Melez Zenawi''' waa Ninka ay soomaalida 90% ay ugu Neceb tahay [[Africa]], Mid kale ayaa waxaa uu yiri Melez Zenawi soomaalidu waxay ay u necebtahay siyaasadiisa Qalafsan ee uu kula dhaqmo soomaalida iyo Muslimiinta,Qoraa kela ayaa qoraal ciwaan waxaa uu uga dhigay Zenawi oo kaliya afrika oo dhan  maxaa ay soomaalidu u necebtahay? 
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Melez Zenawi'''<br>
+[[Image:Meles Zenawi.jpg|250px]]
+|-
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Ra'iisul Wasaaraha [[Itoobiya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 23 [[Agoosto]], [[1995]] ilaa '''Hada'''
+|-
+! Xil kalawareeg:
+| [[Tamirat Layne]].
+<!--|-
+! Xil ku wareejin
+| [[]].-->
+|-
+! Dhashay:
+| 8 [[Maajo]] [[1955]]
+|-
+! Ku dhashay:
+|[[Tigray]], [[Itoobiya]]
+<!--|-
+! Dhintay:
+| [[]] [[]]-->
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Kiristaan]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Ethiopia.svg|25px]]}}}''' [[Itoobiya|Itoobiyaan]]
+|-
+|}
 
-Qormadaani waxaaanu ku soo qaadanayaa Melez Zenawi Taariikh Nololeedkiisa iyo Tan Maamulkiisa oo kooban.
-Qormadaan waxaa qoray Maxamed Cabdi Maxamed Bootaan]Botaan1@hotmail.com 
 
-Melez Zenawi Raisuul Wasaaraha Dalka [[Ethiopia]] waxaa uu ka soo jeedaa Qabiilka Tigreega oo lagu tiriyo inuu ka mid yahay  qabaa'ilka ugu tirada yar dalkaasi Ethiopia waxaa uu dhashay Zenawi 9 May Sanadkii [[1955]] xorayadii [[soomaaliya]] 5 sano ka hor, waxaa uu ku dhashay gobolka waqooyiga ee dhul ahaan uu ka soo jeedo ee Tigreega magaalada Cadwa, waxaa dhalay Melez Zenawi  haweenay u dhaltay dalka Ereitea ee dariska la ah gobolka Tigreega, waxay qaraabo yihiin Madax waynaha Dalka Ereitea Asias Afwerke ee uu dalkiisa ku weeraray marar badan. 
+'''Melez Zenawi''' Ra'iisul Wasaaraha Dalka [[Itoobiya]] waxaa uu ka soo jeedaa Qabiilka Tigreega oo lagu tiriyo inuu ka mid yahay  qabaa'ilka ugu tirada yar dalkaasi Ethiopia waxaa uu dhashay Zenawi 8 [[Maajo]] Sanadkii [[1955]] xorayadii [[Soomaaliya]] 5 sano ka hor, waxaa uu ku dhashay gobolka waqooyiga ee dhul ahaan uu ka soo jeedo ee Tigreega magaalada Cadwa, waxaa dhalay Melez Zenawi  haweenay u dhaltay dalka Ereitea ee dariska la ah gobolka Tigreega, waxay qaraabo yihiin Madax waynaha Dalka Ereitea Asias Afwerke ee uu dalkiisa ku weeraray marar badan. 
 
 Waxaa  uu soo dhigtay Dugsiga sare ee magaalada [[Adis Ababa]], 1970-nadii iyadoo dadkii la dhigan jiray xilgaasi ay ku tilmaamaan inuu ahaa nin aan sidaa u maskax fiicnayn ama damiin ahaa xilgii wax barashadiisa, sanadkii [[1972]] ayaa waxaa uu ku biiray Zenawi kulyada caafimaadka ee Adis Ababa balse in yar ka dib waa uu ka tagay, waxaana uu tagay oo kale ,Jaamacada Haile Selassie University sanakii [[1974]],laakiin kuma nagaadin sida caadada u ahayd Zenawi ee waa uu ka tagay jaamacadiina.
 
@@ -38,6 +74,12 @@ Inkastoo,heshiis dhexmaray Masar iyo Ingriiska sanadkii [[1929]]kii xiligaan  we
 
 Melez Senawi waxa uu maamulkiisa aaminsanaa  inay Itoobiya mid tahay,islamarkaasna ku jirto dalka [[Eritereeya]], taasoo ay qabeen Ragii ka horreeyey ee Haile Selassie iyo Mengistu Haile Mariam,,waxayna xornimada Asmara ku timid Jabhadii xorreynta ee Eriteeriya,taasoo si toos ah calankeeda u la soo laabatay sanadkii 1991,wuxuuna [[Isaias Afewerki]] noqday Madaweynaha [[Eriteeriya]], isagoo markaas ahaa Madaxweynaha ugu dhalinta yar ee Qarumaha Afrika May 24, [[1993]], [[Isaias Afewerki]]. waxaana dhex maray labada dhinac sanadkii [[1998]] dagaalkii ugu darnaa e dhex mara labada dhinac iyadoo ay ilaa iminka is hor fadhiyaan.
 
+----
+
+Qoraa soomaaliyeed ayaa waxaa uu yiri '''Melez Zenawi''' waa Ninka ay soomaalida 90% ay ugu Neceb tahay [[Africa]], Mid kale ayaa waxaa uu yiri Melez Zenawi soomaalidu waxay ay u necebtahay siyaasadiisa Qalafsan ee uu kula dhaqmo soomaalida iyo Muslimiinta,Qoraa kela ayaa qoraal ciwaan waxaa uu uga dhigay Zenawi oo kaliya afrika oo dhan  maxaa ay soomaalidu u necebtahay? 
+
+Qormadaani waxaaanu ku soo qaadanayaa Melez Zenawi Taariikh Nololeedkiisa iyo Tan Maamulkiisa oo kooban.
+Qormadaan waxaa qoray Maxamed Cabdi Maxamed Bootaan]Botaan1@hotmail.com 
 [[Category:Itoobiya|Zenawi, Meles]]
 
 [[am:መለስ ዜናዊ]]
