روبوت  إضافة: [[bcl:Islam]]

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -178,6 +178,7 @@ Sidoo kale Ilaah way rumeysnaayeen, sida marka la yidhaahdo yaa abuuray cirka iy
 [[ba:Ислам]]
 [[bar:Islam]]
 [[bat-smg:Ėslams]]
+[[bcl:Islam]]
 [[be:Іслам]]
 [[be-x-old:Іслам]]
 [[bg:Ислям]]
