روبوت  إضافة: [[bug:Senin]] تعديل: [[yi:מאנטיג]]

--- a/Isniin.mw
+++ b/Isniin.mw
@@ -18,6 +18,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Monday, mida Finnishakana Maanantai
 [[bn:সোমবার]]
 [[br:Lun (deiz)]]
 [[bs:Ponedjeljak]]
+[[bug:Senin]]
 [[ca:Dilluns]]
 [[cbk-zam:Lunes]]
 [[ceb:Lunes]]
@@ -114,7 +115,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Monday, mida Finnishakana Maanantai
 [[vi:Thứ Hai]]
 [[vls:Moandag]]
 [[wa:Londi]]
-[[yi:מאנטיק]]
+[[yi:מאנטיג]]
 [[yo:Ọjọ́ Ajé]]
 [[zh:星期一]]
 [[zh-yue:星期一]]
