روبوت  إضافة: [[bug:Salasa]]

--- a/Talaado.mw
+++ b/Talaado.mw
@@ -19,6 +19,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Tuesday, mida Finnishakana Tiistai
 [[bn:মঙ্গলবার]]
 [[br:Meurzh (deiz)]]
 [[bs:Utorak]]
+[[bug:Salasa]]
 [[ca:Dimarts]]
 [[cbk-zam:Martes]]
 [[ceb:Martes]]
