--- a/Arbaco.mw
+++ b/Arbaco.mw
@@ -18,6 +18,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Wednesday, mida Finnishakana Keskiviikko
 [[bn:বুধবার]]
 [[br:Merc'her (deiz)]]
 [[bs:Srijeda]]
+[[bug:Rabaa]]
 [[ca:Dimecres]]
 [[cbk-zam:Miercoles]]
 [[ceb:Miyerkoles]]
