روبوت  إضافة: [[bug:Kamisi]], [[ro:Joi]] تعديل: [[yi:דאנערשטאג]]

--- a/Khamiis.mw
+++ b/Khamiis.mw
@@ -18,6 +18,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Thursday, mida Finnishakana torstai
 [[bn:বৃহস্পতিবার]]
 [[br:Yaou (deiz)]]
 [[bs:Četvrtak]]
+[[bug:Kamisi]]
 [[ca:Dijous]]
 [[cbk-zam:Jueves]]
 [[ceb:Huwebes]]
@@ -85,6 +86,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Thursday, mida Finnishakana torstai
 [[pl:Czwartek]]
 [[pt:Quinta-feira]]
 [[qu:Illapachaw]]
+[[ro:Joi]]
 [[ru:Четверг]]
 [[sco:Fuirsday]]
 [[sh:Četvrtak]]
@@ -109,6 +111,6 @@ luqada Ingiriiska waxaa laguyiraahdaa Thursday, mida Finnishakana torstai
 [[vi:Thứ Năm]]
 [[vls:Dunderdag]]
 [[wa:Djudi]]
-[[yi:דאנערשטיק]]
+[[yi:דאנערשטאג]]
 [[zh:星期四]]
 [[zh-yue:星期四]]
