روبوت  إضافة: [[af:Kategorie:Christendom]]

--- a/Category:Masiixiyad.mw
+++ b/Category:Masiixiyad.mw
@@ -1,5 +1,6 @@
 [[Category:Diin]]
 
+[[af:Kategorie:Christendom]]
 [[am:Category:ክርስትና]]
 [[an:Categoría:Cristianismo]]
 [[ang:Category:Crīstendōm]]
