روبوت  إضافة: [[tet:Kategoria:Kontinente]]

--- a/Category:Qaaradaha.mw
+++ b/Category:Qaaradaha.mw
@@ -82,6 +82,7 @@
 [[sv:Kategori:Världsdelar]]
 [[sw:Category:Bara]]
 [[ta:பகுப்பு:கண்டங்கள்]]
+[[tet:Kategoria:Kontinente]]
 [[th:หมวดหมู่:ทวีป]]
 [[tl:Category:Mga kontinente]]
 [[tr:Kategori:Kıtalar]]
