*Empty MediaWiki Message*

--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -64,7 +64,7 @@ Dhanka kale Musliinta ma ka barna qabiilkaasi maadaama dadka markii la abuurayay
 
 Gobolka Soomaalida ee Ethiopa waxaa oo ka mid ahaa maamulka Federalka Ethiopia mudu 10sano ku siman ilaa wakhtigii Melez Zenawi xukunkaasi soo rogay, gobolkaasi mudada 10ka sano ah ee uu ka mid yahay Maamulka Federaalka ayaa waxaa soo maray 7 madax wayne mudu ka 10 sano ah taas ayaa waxay cadaynaysaa in laga hortagaagan yahay shacabka iyo madaxdoda soomaalida ah in ay horumar gaaraan mudada Madaxwaynayaashu xilka hayaan waa 1.5 (hal sano iyo Bar) taas oo aan lagu dhamaystiri karin hawlaha siyaasada iyo maamulka hormarinta deegaanada tabaalaysan.
 
-njhdjfdhjggfsdjbsdjbgfsdjfgdnf djkfsdb dfdbfudbgfs dbfsdeghufodhsu djfdbfujdgfasduio djfdgfudgfudgf dsfughdfu8dgf dfgdugfasd8vgbvsduo fjgd8fugasdf8asd dufgasdu7fgasdf dfgasdufgasdfdasf  fhaff fhau8fgasfuga asduogfasuiofgsdab dfguasdugfasdfg sdhfigfasdgfasdbfasdgfausdgf sdgfuasdgfuasgfasdu dgubfugfuasdgf djvgfdubvudfgasd dufgdufgdugfasdu dufgasdugfasdugfb==Masar Iyo itoobiya==
+==Masar iyo Itoobiya==
 
 Sidii Dawladihii hore ee Itooiya, Meles wuxuu doonayaa inuu qayb libaax ka helo Webiga Nile,isagoo doorbidaya inuu soo afjaro ku tiirsanaanta Itoobiya ee Gargaara dalalka Dibeda siiyaan,,waxaana Itoobiya ku nool Maaliyiin Qofo oo faqri ah, mana awoodo inay isticmaasho Webiga Nile, iyadoo 85% Biyaha Nile maraan Itoobiya. 
 
