روبوت  إضافة: ky, tet, tk تعديل: gn

--- a/Category:Yurub.mw
+++ b/Category:Yurub.mw
@@ -40,7 +40,7 @@
 [[ga:Catagóir:An Eoraip]]
 [[gd:Category:An Roinn-Eòrpa]]
 [[gl:Categoría:Europa]]
-[[gn:Categoría:Europa]]
+[[gn:Ñemohenda:Europa]]
 [[got:Category:Aiwropa]]
 [[gv:Category:Yn Europey]]
 [[he:קטגוריה:אירופה]]
@@ -63,6 +63,7 @@
 [[ko:분류:유럽]]
 [[ku:Kategorî:Ewropa]]
 [[kw:Category:Europa]]
+[[ky:Category:Европа]]
 [[la:Categoria:Europa]]
 [[lad:Category:Evropa]]
 [[lb:Kategorie:Europa]]
@@ -105,7 +106,9 @@
 [[sv:Kategori:Europa]]
 [[sw:Category:Ulaya]]
 [[ta:பகுப்பு:ஐரோப்பா]]
+[[tet:Kategoria:Europa]]
 [[th:หมวดหมู่:ทวีปยุโรป]]
+[[tk:Category:Ýewropa]]
 [[tl:Category:Europa]]
 [[tr:Kategori:Avrupa]]
 [[uk:Категорія:Європа]]
