Waxaaan saxay hingaad qaldaneed.

--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -7,11 +7,12 @@ shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta [[Islaam]]ka, wa
 
 == Akhrinta ==
 
-أشهد أن لا إله إلاَّ الله و أشهد أن  محمد رسول الله (luuqada carabiga)
+أشهد أن لا إله إلاَّ الله و أشهد أن  محمد رسول الله [luuqada carabiga]
 
-Waxaan qirayaa in uusan jirin ilaah, Alle (''Allaah'') mooye, waxana qirayaa in uu nabi Muxamed yahay rasuulkii Alle (''Allaah'').
+'''Waxaan qira'yaa in uusan jirin ilaah, Alle (Allaah) mooyee, waxana qirayaa in uu Muxamed (csw) yahay rasuulkii Alle (Allaah).'''
 
-I testify that there is no god (ilah) but God (Allah), and I testify that] Muhammad is the messenger of God (English) 
+I testify that there is no god (ilah) but God (Allah), and I testify that Muhammad is the messenger of God. [luuqada Ingiriiska]
+
 [[Category:Islaam]]
 
 [[ar:شهادتان]]
