--- a/Dhaqaale.mw
+++ b/Dhaqaale.mw
@@ -88,6 +88,7 @@ dhaqaale
 [[sl:Ekonomija]]
 [[sr:Економија]]
 [[sh:Privreda]]
+[[so:Dhaqaale]]
 [[fi:Kansantalous]]
 [[sv:Nationalekonomi]]
 [[ta:பொருளியல்]]
