[[en:Category:Social sciences]]

--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -4,42 +4,62 @@ Adeegsiga hababka cilmiga ku dhisan ayey laamahani kaga duwanaadeen kuwa kale ee
 
 Waxa maadooyinkan ka mid ah: [[dhaqaalaha]], [[culuunta siyaasadda]], iyo [[dembi-baarista]].
 
-
-[[an:Zenzias sozials]]
-[[ast:Ciencies sociales]]
-[[ca:Ciències socials]]
-[[cy:Gwyddorau cymdeithas]]
-[[da:Samfundsvidenskab]]
-[[de:Sozialwissenschaft]]
-[[en:Social sciences]]
-[[et:Sotsiaalteadused]]
-[[es:Ciencias sociales]]
-[[eo:Socia scienco]]
-[[fr:Sciences sociales]]
-[[fur:Siencis sociâls]]
-[[ko:사회 과학]]
-[[io:Sociala cienci]]
-[[id:Ilmu-ilmu sosial]]
-[[it:Scienze sociali]]
-[[he:מדעי החברה]]
-[[ka:საზოგადოებრივი მეცნიერებები]]
-[[lt:Socialiniai mokslai]]
-[[hu:Társadalomtudomány]]
-[[mk:Општествени науки]]
-[[ml:സാമൂഹ്യശാസ്ത്രം]]
-[[ms:Sains sosial]]
-[[nl:Sociale wetenschappen]]
-[[ja:社会科学]]
-[[no:Samfunnsvitenskap]]
-[[pl:Nauki społeczne]]
-[[pt:Ciências sociais]]
-[[ru:Общественные науки]]
-[[sl:Družboslovje]]
-[[fi:Yhteiskuntatieteet]]
-[[sv:Samhällsvetenskap]]
-[[ta:சமூக அறிவியல்]]
-[[th:สังคมศาสตร์]]
-[[tl:Agham panlipunan]]
-[[tr:Sosyal bilimler]]
-[[ur:معاشرتی علوم]]
-[[zh:社会科学]]
+[[ar:تصنيف:علوم اجتماعية]]
+[[an:Categoría:Zenzias sozials]]
+[[ast:Categoría:Ciencies sociales]]
+[[az:Kateqoriya:Sosial elmlər]]
+[[zh-min-nan:Category:Siā-hōe kho-ha̍k]]
+[[bs:Kategorija:Društvene nauke]]
+[[bg:Категория:Социални науки]]
+[[ca:Categoria:Ciències socials]]
+[[cy:Categori:Gwyddorau cymdeithas]]
+[[da:Kategori:Samfundsvidenskab]]
+[[de:Kategorie:Sozialwissenschaft]]
+[[en:Category:Social sciences]]
+[[et:Kategooria:Sotsiaalteadused]]
+[[el:Κατηγορία:Κοινωνικές επιστήμες]]
+[[es:Categoría:Ciencias sociales]]
+[[eu:Kategoria:Gizarte zientziak]]
+[[fr:Catégorie:Sciences sociales]]
+[[fur:Categorie:Siencis sociâls]]
+[[gl:Category:Ciencias sociais]]
+[[ko:분류:사회 과학]]
+[[hr:Kategorija:Društvene znanosti]]
+[[io:Category:Sociala cienci]]
+[[id:Kategori:Ilmu sosial]]
+[[ia:Categoria:Scientias social]]
+[[is:Flokkur:Félagsvísindi]]
+[[it:Categoria:Scienze sociali]]
+[[he:קטגוריה:מדעי החברה]]
+[[ka:კატეგორია:საზოგადოებრივი მეცნიერებები]]
+[[csb:Kategòrëjô:Spòlëznowé ùczbë]]
+[[lv:Kategorija:Sociālās zinātnes]]
+[[lt:Kategorija:Socialiniai mokslai]]
+[[hu:Kategória:Társadalomtudományok]]
+[[mk:Категорија:Општествени науки]]
+[[mt:Category:Xjenza soċjali]]
+[[ms:Kategori:Sains Sosial]]
+[[nl:Categorie:Sociale wetenschap]]
+[[ja:Category:社会科学]]
+[[no:Kategori:Samfunnsvitenskap]]
+[[oc:Categoria:Sciéncias socialas]]
+[[pl:Kategoria:Nauki społeczne]]
+[[pt:Categoria:Ciências sociais]]
+[[rm:Category:Scienzas socialas]]
+[[ro:Categorie:Ştiinţe sociale]]
+[[rmy:Shopni:Manushikanipnaske janglimata]]
+[[ru:Категория:Общественные науки]]
+[[simple:Category:Social sciences]]
+[[sk:Kategória:Spoločenské vedy]]
+[[sl:Kategorija:Družboslovje]]
+[[sr:Категорија:Друштвене науке]]
+[[sh:Category:Društvene nauke]]
+[[su:Kategori:Élmu sosial]]
+[[fi:Luokka:Yhteiskuntatiede]]
+[[sv:Kategori:Samhällsvetenskap]]
+[[tl:Category:Mga agham panlipunan]]
+[[vi:Thể loại:Khoa học xã hội]]
+[[tr:Kategori:Sosyal bilimler]]
+[[ur:زمرہ:معاشرتی علوم]]
+[[yi:קאַטעגאָריע:סאציאל וויסנשאפט]]
+[[zh:Category:社会科学]]
