--- a/Daarood.mw
+++ b/Daarood.mw
@@ -1,5 +1,5 @@
 Daarood keligiis uma baahna in halka gaar loogu faalleyo, waxaase kaaga filan in daarood yahay qabiil ka mid ah qabaailka sharafta leh ee soomaaliyeed. Qabaailka soomaaliyeed dhamaantood waa walaalo qabiil kastaana kan kale ayuu wax ku yahay. Qabaailka soomaaliyeed waa kuwo aan wax faraq ahi u dhexeyn wadaagana dhib iyo dheef una soo wada halgamay xoreynta dalka iyo fidintii islaamku uu ku fiday geeska afrika .
-darood wuxuu asal ahaan kasoo jeeda dalka yemen oo uu markii hore ka yimid isaga oo shaqsi ah magaciisa runtahna waa daauud ismaaciil iyadoo ay yemen joogaan qabiilo ay walaalo yihiin sida:meheri ismaaciil......magaca daarood wuxuu kuy baxay markuu somaliya yimi ayuu wuxuu ka dhistay guri uuna ooday gurigaas marka uu dhisay guriga ayaa dadkii mesha dagnaa ugu bixiyeen daar ood magacana waa labadaa erey oo laysku qabtay..............
+darood wuxuu asal ahaan kasoo jeeda dalka Suriya oo uu markii hore ka yimid isaga oo shaqsi ah magaciisa runtahna waa daauud ismaaciil iyadoo ay yemen joogaan qabiilo ay walaalo yihiin sida:meheri ismaaciil......magaca daarood wuxuu kuy baxay markuu somaliya yimi ayuu wuxuu ka dhistay guri uuna ooday gurigaas marka uu dhisay guriga ayaa dadkii mesha dagnaa ugu bixiyeen daar ood magacana waa labadaa erey oo laysku qabtay..............
 
 
 {{gumud}}
