*Empty MediaWiki Message*

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -166,6 +166,7 @@ Sidoo kale Ilaah way rumeysnaayeen, sida marka la yidhaahdo yaa abuuray cirka iy
 
 
 [[Category:Islaam]]
+[[Category:Diinta Soomaaliya]]
 
 [[af:Islam]]
 [[als:Islam]]
