*Empty MediaWiki Message*

--- a/Webiga_shabeelle.mw
+++ b/Webiga_shabeelle.mw
@@ -1,2 +1,5 @@
+Webiga Shabeelle dhererkiisu wuxuu gaaraa ilaa 1500km. Wuxuuna maraa magaalooyin farabada oo dalka Soomaaliya kamid ah.
+
 {{gumud}}
+
 [[Category:Webiyada Soomaaliya]]
