--- a/Shabeellaha_Dhexe.mw
+++ b/Shabeellaha_Dhexe.mw
@@ -42,3 +42,5 @@ image_location = Somalia_regions_map_Shabeellaha_Dhexe.svg|
 [[jv:Shabeellaha Dhexe]]
 [[nl:Shabeellaha Dhexe]]
 [[pt:Shabeellaha Dhexe]]
+dadka degan gobolka waxeey u badan yihiin
+mudulood gaar ahaan abgaal cismaan
