روبوت  إضافة: [[tk:Category:Fizika]]

--- a/Category:Fiisigis.mw
+++ b/Category:Fiisigis.mw
@@ -84,6 +84,7 @@
 [[sw:Category:Fizikia]]
 [[ta:பகுப்பு:இயற்பியல்]]
 [[th:หมวดหมู่:ฟิสิกส์]]
+[[tk:Category:Fizika]]
 [[tr:Kategori:Fizik]]
 [[tt:Törkem:Fizika]]
 [[uk:Категорія:Фізика]]
